welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: type mismatch;
 found   : Unit
 required: Int
	for (c <- 1 to num.length-1)
               ^